# tdoc

./: Cargo.toml  README.md  test_blockquote_with_list.ftml  test_context.ftml  test_full_doc.ftml  test_nested_blockquote.ftml  test_nested_p.ftml  test_nested_quote_in_list.ftml  test_paragraph.ftml  test_partial.ftml  test_simple.ftml  test_simple_ul.ftml  test_specific.ftml  test_unicode.ftml  test_unicode_quotes.ftml
.github/workflows/: actions.yml
src/: custom.rs  document.rs  formatter.rs  inline.rs  lib.rs  macros.rs  markdown.rs  metadata.rs  pager.rs  paragraph.rs  parser.rs  test_helpers.rs  writer.rs
src/formatter/: mod.rs
src/ftml/: mod.rs  parser.rs  writer.rs
src/gemini/: mod.rs
src/html/: mod.rs
src/html/gockl/: mod.rs
src/markdown/: mod.rs
tests/: custom_paragraphs.rs  ftml_macro.rs  ftml_roundtrips.rs  gemini_roundtrips.rs  html_import.rs  html_parse_smoke.rs  html_parser_cases.rs  integration_tests.rs  markdown_import.rs  markdown_roundtrips.rs  snapshot_tests.rs
tests/snapshots/: snapshot_tests__ascii__test.snap.txt  snapshot_tests__ascii__test_blockquote_simple.snap.txt  snapshot_tests__ascii__test_blockquote_with_list.snap.txt  snapshot_tests__ascii__test_code_block.snap.txt  snapshot_tests__ascii__test_context.snap  snapshot_tests__ascii__test_context.snap.txt  snapshot_tests__ascii__test_full_doc.snap.txt  snapshot_tests__ascii__test_minimal.snap.txt  snapshot_tests__ascii__test_nested_blockquote.snap.txt  snapshot_tests__ascii__test_nested_checklists.snap.txt  snapshot_tests__ascii__test_nested_quote_in_list.snap.txt  snapshot_tests__ascii__test_paragraph.snap.txt  snapshot_tests__ascii__test_partial.snap  snapshot_tests__ascii__test_partial.snap.txt  snapshot_tests__ascii__test_simple_ul.snap.txt  snapshot_tests__ascii__test_smart_quotes.snap.txt  snapshot_tests__ascii__test_specific.snap.txt  snapshot_tests__ascii__test_unicode.snap.txt  snapshot_tests__ascii__test_unicode_quotes.snap.txt  snapshot_tests__ascii__testdocument.snap.txt  snapshot_tests__blockquote_to_markdown.snap  snapshot_tests__bold_text_to_markdown.snap  snapshot_tests__code_text_to_markdown.snap  snapshot_tests__complex_document_to_markdown.snap  snapshot_tests__headers_to_markdown.snap  snapshot_tests__italic_text_to_markdown.snap  snapshot_tests__mixed_inline_styles_to_markdown.snap  snapshot_tests__nested_inline_styles_to_markdown.snap  snapshot_tests__nested_lists_to_markdown.snap  snapshot_tests__ordered_list_to_markdown.snap  snapshot_tests__simple_paragraph_to_markdown.snap  snapshot_tests__strikethrough_to_markdown.snap  snapshot_tests__test.snap.md  snapshot_tests__test_blockquote_simple.snap.md  snapshot_tests__test_blockquote_with_list.snap.md  snapshot_tests__test_code_block.snap  snapshot_tests__test_code_block.snap.md  snapshot_tests__test_context.snap.md  snapshot_tests__test_full_doc.snap.md  snapshot_tests__test_minimal.snap.md  (+11 more)
(+116 files in other folders)
