[package]
name = "tdoc"
version = "0.7.0"
edition = "2021"
description = "Library and assorted CLI tools for working with FTML (Formatted Text Markup Language) documents"
authors = ["Rob Lillack <rob@lillack.net>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/roblillack/tdoc"

[lib]
name = "tdoc"
path = "src/lib.rs"

[[bin]]
name = "tdoc"
path = "src/bin/tdoc.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
regex = "1.10"
thiserror = "1.0"
reqwest = { version = "0.11", features = ["blocking"] }
url = "2.4"
crossterm = "0.27"
atty = "0.2"
pulldown-cmark = "0.13"
html-escape = "0.2"
once_cell = "1.19"
ratatui = "0.29.0"
unicode-width = "0.1"

[dev-dependencies]
assert_matches = "1.5"
insta = "1.40"
