[package]
name = "tdoc"
version = "0.10.0"
edition = "2021"
description = "Library and assorted CLI tools for working with FTML (Formatted Text Markup Language) documents"
authors = ["Rob Lillack <rob@lillack.net>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/roblillack/tdoc"

[lib]
name = "tdoc"
path = "src/lib.rs"

[[bin]]
name = "tdoc"
path = "src/bin/tdoc/main.rs"

[features]
default = ["remote"]
remote = ["dep:reqwest", "dep:rustls", "dep:rustls-native-certs", "dep:webpki-roots"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
regex = "1.10"
thiserror = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "rustls-tls"], optional = true }
url = "2.4"
crossterm = "0.27"
atty = "0.2"
pulldown-cmark = "0.13"
html-escape = "0.2"
indexmap = { version = "2.7", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
once_cell = "1.19"
unicode-width = "0.1"
rustls = { version = "0.23", optional = true }
rustls-native-certs = { version = "0.8", optional = true }
webpki-roots = { version = "0.26", optional = true }

[dev-dependencies]
assert_matches = "1.5"
insta = "1.40"
